# bezier_dp_fit

./: .gitignore  cargo.toml  pyproject.toml  quickstart.md  readme.md  usage_guide.md
benches/: benchmark.rs
examples/: example_py.py
src/: lib.rs
src/fitting/: fitter.rs  mod.rs
src/geometry/: bezier.rs  mod.rs  point.rs
src/optimizer/: config.rs  cuda.rs  dp.rs  mod.rs
src/python/: bindings.rs
tests/: basic.rs
